cambios en pagina contactos

--- a/assets/pages/contacto.html
+++ b/assets/pages/contacto.html
@@ -19,30 +19,26 @@
   
 
 <body data-bs-spy="scroll" data-bs-target=".navbar">
-    <!--navbar-->
-    <nav class="navbar  navbar-dark  fixed-top navbar-expand-lg bg-principal" data-aos="fade-down">
-        <div class="container color-principal">  
-            <a class="navbar-brand fuente-brand text-light " href="#">Physio Animal</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse " id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link text-light" href="../../index.html">Inicio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-light" href="../pages/nServicios.html">Servicios</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-light" href="../pages/contacto.html">Contacto</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+<!--Barra de navegacion-->
+<nav class="navbar navbar-expand-lg background-color-principal mb-3 fixed-top">
+    <div class="container">
+      <a class="navbar-brand text-light fuente-brand" href="#">Physio Animal</a>
+      <button class="navbar-toggler text-light" type="button" data-bs-toggle="collapse"
+        data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+        aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon text-light "></span>
+      </button>
+      <div class="collapse navbar-collapse text-light" id="navbarNavAltMarkup">
+        <div class="navbar-nav ms-auto ">
+          <a class="nav-link text-light active" aria-current="page" href="../../index.html">Inicio</a>
+          <a class="nav-link text-light " href="nServicios.html">servicios</a>
+          <a class="nav-link text-light " href="contacto.html">contacto</a>
 
+        </div>
+      </div>
+    </div>
+  </nav>
+  
         <div class="container mt-5 ">
             <div class="row">
                 <div class=" col-12 text-center mt-5">
@@ -67,7 +63,7 @@
                     <div class="col-md-6 text-md-end">
                         <div>
                             <a
-                                href="mailto:contacto@ingesamid.com?subject=Mail from our Website">contacto@physioanimal.com</a>
+                                href="mailto:contacto@phisioanimal.com?subject=Mail from our Website">contacto@physioanimal.com</a>
                         </div>
                     </div>
                 </div>
