--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
 
   <!--Barra de navegacion-->
-  <nav class="navbar navbar-expand-lg background-color-principal mb-3">
+  <nav class="navbar navbar-expand-lg background-color-principal mb-3 rounded-bottom ">
     <div class="container">
       <a class="navbar-brand text-light fuente-brand" href="#">Physio Animal</a>
       <button class="navbar-toggler text-light" type="button" data-bs-toggle="collapse"
@@ -43,6 +43,7 @@
       </div>
     </div>
   </nav>
+
   <div class="container">
     <!--CARRUSEL-->
     <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
@@ -83,7 +84,6 @@
 
     <!--MISION VISION-->
     <div class="row row-cols-1 row-cols-md-2 g-4 mt-5">
-
       <div class="col">
         <div class="card">
           <img src="assets/img/PA_006.jpg" class="card-img-top foto-radius-inverso max-height" alt="...">
@@ -105,11 +105,10 @@
         </div>
       </div>
     </div>
-    <!--FINAL MISION VISION-->
   </div>
+<!--FINAL MISION VISION-->
 
   <!--SERVICIOS-->
-
   <div class="container background-color-principal text-light ">
     <div class="row">
       <div class="col-12 section-intro text-center">
