--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       </div>
     </div>
   </div>
-<!--FINAL MISION VISION-->
+  <!--FINAL MISION VISION-->
 
   <!--SERVICIOS-->
   <div class="container background-color-principal text-light ">
@@ -121,7 +121,7 @@
       <div class="col-md-6 feature " data-aos="fade-up" data-aos-duration="2000">
         <h3 class="mt-4 mb-3 text-center p-3">Fisioterapia</h3>
         <p class="text-left p-2  fw-bold">
-           La fisioterapia es el arte y la ciencia del tratamiento por medio del ejercicio
+          La fisioterapia es el arte y la ciencia del tratamiento por medio del ejercicio
           terapéutico, calor, frío, luz, agua, masaje y electricidad - Organización Mundial de la Salud
           (OMS).
         </p>
@@ -130,8 +130,8 @@
         <h3 class="mt-4 mb-3 text-center p-3">Rehabilitación</h3>
         <p class="text-left  p-2 fw-bold">
           El conjunto de métodos que tienen por finalidad la recuperación de una
-actividad o función perdida o disminuida por traumatismo o enfermedad - Organización
-Mundial de la Salud (OMS).
+          actividad o función perdida o disminuida por traumatismo o enfermedad - Organización
+          Mundial de la Salud (OMS).
         </p>
       </div>
     </div>
@@ -139,107 +139,150 @@ Mundial de la Salud (OMS).
       <button type="button" class="btn text-white "><a class="nav-link" href="">Mas ...</a></button>
     </div>
   </div>
-  
+
   <!--FINAL SERVICIOS-->
 
   <!--HISTORIAS BONITAS-->
-  <div class="container ">
-    <div class="row">
+  <div class="container mt-5 ">
+    <div class="row mb-3">
       <div class="col-12 section-intro text-center" data-aos="fade-up" data-aos-duration="2000">
         <h2 class="fuente-brand color-texto-secundario text-shadow-titulos">HISTORIAS BONITAS</h2>
       </div>
     </div>
     <div class="row text-left">
       <div class="col-md-4" data-aos="fade-up" data-aos-duration="2000">
-        <img class=" border-radius img-trabajos-previos" src="assets/img/cheems.jpg" alt="" />
+        <img class="  img-trabajos-previos " src="assets/img/1.png" alt="" />
         <div class="mt-2">
-          <h5 class="mt-1 general-text text-left">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Totam recusandae ratione, asperiores maiores repellat soluta.z</h5>
+          <div class="accordion" id="accordionExample">
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingOne">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  LUCKY
+                </button>
+              </h2>
+              <div id="collapseOne" class="accordion-collapse collapse " aria-labelledby="headingOne"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  Hola mi nombre es Lucky, de joven siempre fui muy veloz, cazador, curioso, amaba
+                  proteger mi casa y mi familia,a cualquier intruso que se acercara con mi super ladrido lo
+                  ahuyentaba, poco a poco los días y los años pasaron y al cumplir 12 años, empecé a tener
+                  dificultades para caminar y tenía mucho dolor en una de mis patitas traseras, fui con mi
+                  super doctora y ella me realizo estudios los cuales indican que ya tenía problemas
+                  derivados a mi edad, al poco tiempo, entre a Physio Animal, mi super fisio me ayudó a que
+                  el cuerpo ya no me duela y pueda volver a jugar, correr y hacer lo que antes no podia, hasta
+                  mi ultimo dia de vida. Hoy ya soy un paciente que está en el cielo, pero gracias a la
+                  fisioterapia, rehabilitación, y mi super doctora, estuve bien hasta mis últimos días.
+                </div>
+              </div>
+            </div>
+
+          
         </div>
       </div>
       <div class="col-md-4" data-aos="fade-up" data-aos-duration="2000">
-        <img class=" border-radius img-trabajos-previos" src="assets/img/cheems.jpg" alt="" />
+        <img class="  img-trabajos-previos" src="assets/img/2.png" alt="" />
         <div class="mt-2">
-          <h5 class="mt-1 mb-2 general-text">Lorem, ipsum dolor sit amet consectetur adipisicing
-            elit. Earum dolor quas nulla, doloremque rem iure.</h5>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingOne">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                LUCKY
+              </button>
+            </h2>
+            <div id="collapseOne" class="accordion-collapse collapse " aria-labelledby="headingOne"
+              data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                Hola mi nombre es Lucky, de joven siempre fui muy veloz, cazador, curioso, amaba
+                proteger mi casa y mi familia,a cualquier intruso que se acercara con mi super ladrido lo
+                ahuyentaba, poco a poco los días y los años pasaron y al cumplir 12 años, empecé a tener
+                dificultades para caminar y tenía mucho dolor en una de mis patitas traseras, fui con mi
+                super doctora y ella me realizo estudios los cuales indican que ya tenía problemas
+                derivados a mi edad, al poco tiempo, entre a Physio Animal, mi super fisio me ayudó a que
+                el cuerpo ya no me duela y pueda volver a jugar, correr y hacer lo que antes no podia, hasta
+                mi ultimo dia de vida. Hoy ya soy un paciente que está en el cielo, pero gracias a la
+                fisioterapia, rehabilitación, y mi super doctora, estuve bien hasta mis últimos días.
+              </div>
+            </div>
+          </div>
         </div>
       </div>
       <div class="col-md-4" data-aos="fade-up" data-aos-duration="2000">
-        <img class=" border-radius img-trabajos-previos" src="assets/img/cheems.jpg" alt="" />
+        <img class=" img-trabajos-previos" src="assets/img/3.png" alt="" />
         <div class="mt-2">
           <h5 class="m-2 general-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum ex doloremque
             quis esse, repellat voluptates.</h5>
         </div>
       </div>
     </div>
-    </div>
-    <!--FINAL HISTORIAS BONITAS-->
-    <!--CONTACT0-->
-    <div class="container">
-    <section class=" text-white bg-img" >
-          <div class="row">
-              <div class="col-md-8 mx-auto" data-aos="fade-up" data-aos-duration="2000">
-                  <div class="wrapper ">
-                      <h2 class=" text-left mb-3 mt-3">CONTACTO</h2>
-                      <form action="https://formsubmit.co/herrera.ancona@gmail.com" method="POST">
-                          <label for="Nombre">Nombre</label><br />
-                          <input class="form-control" type="text" name="name" /><br />
+  </div>
+  </div>
+  <!--FINAL HISTORIAS BONITAS-->
+  <!--CONTACT0-->
+  <div class="container">
+    <section class=" text-white bg-img">
+      <div class="row">
+        <div class="col-md-8 mx-auto" data-aos="fade-up" data-aos-duration="2000">
+          <div class="wrapper ">
+            <h2 class=" text-left mb-3 mt-3">CONTACTO</h2>
+            <form action="https://formsubmit.co/herrera.ancona@gmail.com" method="POST">
+              <label for="Nombre">Nombre</label><br />
+              <input class="form-control" type="text" name="name" /><br />
 
-                          <label for="email">Correo Electrónico</label><br />
-                          <input class="form-control" type="email" name="email" /><br />
+              <label for="email">Correo Electrónico</label><br />
+              <input class="form-control" type="email" name="email" /><br />
 
-                          <label for="subject">Asunto</label><br />
-                          <input class="form-control" type="text" name="subject" /><br />
+              <label for="subject">Asunto</label><br />
+              <input class="form-control" type="text" name="subject" /><br />
 
-                          <label for="email">Comentarios</label><br />
-                          <textarea class="form-control" name="comments" cols="25" rows="4"></textarea><br />
-                          <div class="text-center mb-5">
-                              <input class="mb-2 btn btn-main " id="boton-enviar" type="submit" value="Enviar" />
-                          </div>
-                          <input type="hidden" name="_next"
-                              value="https://herrera1010.github.io/portfolio/mensaje-exitoso.html" />
-                          <input type="hidden" name="_captcha" value="false" />
-                      </form>
-                  </div>
+              <label for="email">Comentarios</label><br />
+              <textarea class="form-control" name="comments" cols="25" rows="4"></textarea><br />
+              <div class="text-center mb-5">
+                <input class="mb-2 btn btn-main " id="boton-enviar" type="submit" value="Enviar" />
               </div>
-          </div>
-      </div>
-  </section>
-    <!--FINAL CONTACTO-->
-    <!--FOOTER-->
-    <footer class="py-4 ">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-md-6">
-            <p class="mb-0 fuente-brand">Physio Animal</p>
-          </div>
-          <div class="col-md-6 text-md-end">
-            <div>
-              <a href="mailto:contacto@ingesamid.com?subject=Mail from our Website">contacto@physioanimal.com</a>
-            </div>
+              <input type="hidden" name="_next" value="https://herrera1010.github.io/portfolio/mensaje-exitoso.html" />
+              <input type="hidden" name="_captcha" value="false" />
+            </form>
           </div>
         </div>
       </div>
-    </footer>
-
-    <div class="containerBoton2  d-block d-xxl-none d-lg-none d-xl-none">
-      <a href="tel:+529994417237">
-        <img class="botonT" src="assets/img/phone-solid.svg" alt="boton lamada">
-      </a>
+  </div>
+  </section>
+  <!--FINAL CONTACTO-->
+  <!--FOOTER-->
+  <footer class="py-4 ">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-6">
+          <p class="mb-0 fuente-brand">Physio Animal</p>
+        </div>
+        <div class="col-md-6 text-md-end">
+          <div>
+            <a href="mailto:contacto@ingesamid.com?subject=Mail from our Website">contacto@physioanimal.com</a>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="containerBoton d-block d-xxl-none d-lg-none d-xl-none">
-      <a href="https://wa.me/+529994417237?text=Solicito%20informacion" target="_blank">
-        <img class="botonW" src="assets/img/waIcono.png" alt="boton whatsapp">
-      </a>
-    </div>
+  </footer>
+
+  <div class="containerBoton2  d-block d-xxl-none d-lg-none d-xl-none">
+    <a href="tel:+529994417237">
+      <img class="botonT" src="assets/img/phone-solid.svg" alt="boton lamada">
+    </a>
+  </div>
+  <div class="containerBoton d-block d-xxl-none d-lg-none d-xl-none">
+    <a href="https://wa.me/+529994417237?text=Solicito%20informacion" target="_blank">
+      <img class="botonW" src="assets/img/waIcono.png" alt="boton whatsapp">
+    </a>
+  </div>
 
 
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="js/app.js"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script src="js/app.js"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
