historias bonitas cambio de formto

--- a/index.html
+++ b/index.html
@@ -143,79 +143,49 @@
   <!--FINAL SERVICIOS-->
 
   <!--HISTORIAS BONITAS-->
-  <div class="container mt-5 ">
-    <div class="row mb-3">
-      <div class="col-12 section-intro text-center" data-aos="fade-up" data-aos-duration="2000">
-        <h2 class="fuente-brand color-texto-secundario text-shadow-titulos">HISTORIAS BONITAS</h2>
+  <div class="container">
+    <h2 class=" mt-4 titulos-text text-center text-uppercase">historias bonitas</h2>
+    <div class="card mb-3">
+      <img src="assets/img/1.png" class="card-img-top img-trabajos-previos" alt="...">
+      <div class="card-body">
+        <h5 class="card-title text-center">LUCKY</h5>
+        <p class="card-text">Hola mi nombre es Lucky, de joven siempre fui muy veloz, cazador, curioso, amaba
+          proteger mi casa y mi familia,a cualquier intruso que se acercara con mi super ladrido lo
+          ahuyentaba, poco a poco los días y los años pasaron y al cumplir 12 años, empecé a tener
+          dificultades para caminar y tenía mucho dolor en una de mis patitas traseras, fui con mi
+          super doctora y ella me realizo estudios los cuales indican que ya tenía problemas
+          derivados a mi edad, al poco tiempo, entre a Physio Animal, mi super fisio me ayudó a que
+          el cuerpo ya no me duela y pueda volver a jugar, correr y hacer lo que antes no podia, hasta
+          mi ultimo dia de vida. Hoy ya soy un paciente que está en el cielo, pero gracias a la
+          fisioterapia, rehabilitación, y mi super doctora, estuve bien hasta mis últimos días.</p>
       </div>
     </div>
-    <div class="row text-left">
-      <div class="col-md-4" data-aos="fade-up" data-aos-duration="2000">
-        <img class="  img-trabajos-previos " src="assets/img/1.png" alt="" />
-        <div class="mt-2">
-          <div class="accordion" id="accordionExample">
-            <div class="accordion-item">
-              <h2 class="accordion-header" id="headingOne">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                  LUCKY
-                </button>
-              </h2>
-              <div id="collapseOne" class="accordion-collapse collapse " aria-labelledby="headingOne"
-                data-bs-parent="#accordionExample">
-                <div class="accordion-body">
-                  Hola mi nombre es Lucky, de joven siempre fui muy veloz, cazador, curioso, amaba
-                  proteger mi casa y mi familia,a cualquier intruso que se acercara con mi super ladrido lo
-                  ahuyentaba, poco a poco los días y los años pasaron y al cumplir 12 años, empecé a tener
-                  dificultades para caminar y tenía mucho dolor en una de mis patitas traseras, fui con mi
-                  super doctora y ella me realizo estudios los cuales indican que ya tenía problemas
-                  derivados a mi edad, al poco tiempo, entre a Physio Animal, mi super fisio me ayudó a que
-                  el cuerpo ya no me duela y pueda volver a jugar, correr y hacer lo que antes no podia, hasta
-                  mi ultimo dia de vida. Hoy ya soy un paciente que está en el cielo, pero gracias a la
-                  fisioterapia, rehabilitación, y mi super doctora, estuve bien hasta mis últimos días.
-                </div>
-              </div>
-            </div>
-
-          
-        </div>
-      </div>
-      <div class="col-md-4" data-aos="fade-up" data-aos-duration="2000">
-        <img class="  img-trabajos-previos" src="assets/img/2.png" alt="" />
-        <div class="mt-2">
-          <div class="accordion-item">
-            <h2 class="accordion-header" id="headingOne">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                LUCKY
-              </button>
-            </h2>
-            <div id="collapseOne" class="accordion-collapse collapse " aria-labelledby="headingOne"
-              data-bs-parent="#accordionExample">
-              <div class="accordion-body">
-                Hola mi nombre es Lucky, de joven siempre fui muy veloz, cazador, curioso, amaba
-                proteger mi casa y mi familia,a cualquier intruso que se acercara con mi super ladrido lo
-                ahuyentaba, poco a poco los días y los años pasaron y al cumplir 12 años, empecé a tener
-                dificultades para caminar y tenía mucho dolor en una de mis patitas traseras, fui con mi
-                super doctora y ella me realizo estudios los cuales indican que ya tenía problemas
-                derivados a mi edad, al poco tiempo, entre a Physio Animal, mi super fisio me ayudó a que
-                el cuerpo ya no me duela y pueda volver a jugar, correr y hacer lo que antes no podia, hasta
-                mi ultimo dia de vida. Hoy ya soy un paciente que está en el cielo, pero gracias a la
-                fisioterapia, rehabilitación, y mi super doctora, estuve bien hasta mis últimos días.
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4" data-aos="fade-up" data-aos-duration="2000">
-        <img class=" img-trabajos-previos" src="assets/img/3.png" alt="" />
-        <div class="mt-2">
-          <h5 class="m-2 general-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum ex doloremque
-            quis esse, repellat voluptates.</h5>
-        </div>
+    <div class="card mb-3">
+      <img src="assets/img/2.png" class="card-img-top img-trabajos-previos" alt="...">
+      <div class="card-body">
+        <h5 class="card-title text-center">NUCKY </h5>
+        <p class="card-text">Hola mi nombre es Nucky, tengo 12 años, soy un pastor belga y soy el perro alfa de
+          la manada en mi casa, de joven era el más fuerte de todos los pastores belgas del mundo
+          mundial, rompía paredes ENTERAS, imaginense que tan fuerte era, era invencible, hace
+          unos años, me empezó a dar trabajo caminar, mis patas delanteras y traseras me fallaban
+          mucho, ya no me sentía seguro, ya no me sentía fuerte, así que me llevaron al doctor y mi
+          doctor recomendó la fisioterapia y rehabilitación, acudi a physio animal y desde entonces he
+          mejorado mucho, tengo días buenos y otros no tanto, pero aun logró caminar, dar paseos y
+          eso me hace sentir super fuerte para toda mi familia, hoy me encanta tomar el sol todo el
+          dia, siempre alerta, y dormir todo el dia, pero siempre alerta, la persona que quiera entrar a
+          mi hogar tendrá que pasar por mis dientes primero.</p>
+        
       </div>
     </div>
-  </div>
+    <div class="card mb-3">
+      <img src="assets/img/1.png" class="card-img-top img-trabajos-previos" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.
+          This content is a little bit longer.</p>
+        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      </div>
+    </div>
   </div>
   <!--FINAL HISTORIAS BONITAS-->
   <!--CONTACT0-->
