cambios en hisotorias bonitas

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
       <img src="assets/img/2.png" class="card-img-top img-trabajos-previos" alt="...">
       <div class="card-body">
         <h5 class="card-title text-center">NUCKY </h5>
-        <p class="card-text">Hola mi nombre es Nucky, tengo 12 años, soy un pastor belga y soy el perro alfa de
+        <p class="card-text ">Hola mi nombre es Nucky, tengo 12 años, soy un pastor belga y soy el perro alfa de
           la manada en mi casa, de joven era el más fuerte de todos los pastores belgas del mundo
           mundial, rompía paredes ENTERAS, imaginense que tan fuerte era, era invencible, hace
           unos años, me empezó a dar trabajo caminar, mis patas delanteras y traseras me fallaban
@@ -180,9 +180,18 @@
     <div class="card mb-3">
       <img src="assets/img/1.png" class="card-img-top img-trabajos-previos" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.
-          This content is a little bit longer.</p>
+        <h5 class="card-title text-center">KIIN</h5>
+        <p class="card-text ">Hola mi nombre es Kiin, tengo 7 años y soy un Pitbull, una raza feroz, veloz,
+          fuerte...pero yo, como mi nombre en maya dice “kiin” que significa “Sol”, soy UN SOL, lo
+          único que se dar, es amor, besos y abrazos, AMO a la gente, AMO a los perros, y AMO
+          INTENSAMENTE, es tanto el amor que doy, que a veces duele, siempre tuve una vida
+          intensa y muy feliz, hasta que un dia, me desperte y tenía la mitad de mi cara paralizada,
+          mis dueños se preocuparon mucho y me llevaron al doctor, el doctor me hizo muchos
+          estudios ya que era algo preocupante, después de todos mis estudios, empecé a ir a
+          fisioterapia y rehabilitación, y empecé a mejorar muchísimo, mi familia se comprometió al
+          1000% conmigo y mejore muy rápido, hoy, ya puedo mover mi cara, ya puedo comer sin
+          dificultad, ya todo es como antes, gracias a las terapias y el compromiso de mi familia he
+          logrado lo que antes no podía.</p>
         <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
       </div>
     </div>
