construccion de seccion servicios

--- a/assets/pages/contacto.html
+++ b/assets/pages/contacto.html
@@ -33,12 +33,10 @@
           <a class="nav-link text-light active" aria-current="page" href="../../index.html">Inicio</a>
           <a class="nav-link text-light " href="nServicios.html">servicios</a>
           <a class="nav-link text-light " href="contacto.html">contacto</a>
-
         </div>
       </div>
     </div>
   </nav>
-  
         <div class="container mt-5 ">
             <div class="row">
                 <div class=" col-12 text-center mt-5">
@@ -46,7 +44,7 @@
                 </div>
                 <div class=" col-12"><P class="text-left">
                   Para cualquier duda sobre nuestros servicios, o como 
-                  posdemos ayudar a tu lomito pudes contactarnos al correo:
+                  podemos ayudar a tu lomito pudes contactarnos al correo:
                   lomitos@gmail.com o via whatsapp al 9999239823.
                 </P></div>
              <div class=" col-12 text-center mb-5 w-100 " >                 
