--- a/assets/pages/nServicios.html
+++ b/assets/pages/nServicios.html
@@ -105,9 +105,10 @@
                   <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                 </div>
               </div>
-            </div>
-          </div>
+            </div> 
+          
        </div>
+       <!--FINAL SERVICIOS FISIOTERAPIA-->
     <!--INICIO DE FOOTER-->
     <footer class="py-4 mt-5">
         <div class="container">
