--- a/assets/pages/contacto.html
+++ b/assets/pages/contacto.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Physio Animal</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <!--CSS-->
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/footer.css">
@@ -15,58 +15,63 @@
     <link rel="shortcut icon" href="../img/BLANCO.ico" />
     <!--LIBRERIA AOS-->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-  </head>
-  
+</head>
+
 
 <body data-bs-spy="scroll" data-bs-target=".navbar">
-<!--Barra de navegacion-->
-<nav class="navbar navbar-expand-lg background-color-principal mb-3 fixed-top">
-    <div class="container">
-      <a class="navbar-brand text-light fuente-brand" href="#">Physio Animal</a>
-      <button class="navbar-toggler text-light" type="button" data-bs-toggle="collapse"
-        data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
-        aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon text-light "></span>
-      </button>
-      <div class="collapse navbar-collapse text-light" id="navbarNavAltMarkup">
-        <div class="navbar-nav ms-auto ">
-          <a class="nav-link text-light active" aria-current="page" href="../../index.html">Inicio</a>
-          <a class="nav-link text-light " href="nServicios.html">servicios</a>
-          <a class="nav-link text-light " href="contacto.html">contacto</a>
+    <!--Barra de navegacion-->
+    <nav class="navbar navbar-expand-lg background-color-principal mb-3 fixed-top">
+        <div class="container">
+            <a class="navbar-brand text-light fuente-brand" href="#">Physio Animal</a>
+            <button class="navbar-toggler text-light" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon text-light "></span>
+            </button>
+            <div class="collapse navbar-collapse text-light" id="navbarNavAltMarkup">
+                <div class="navbar-nav ms-auto ">
+                    <a class="nav-link text-light active" aria-current="page" href="../../index.html">Inicio</a>
+                    <a class="nav-link text-light " href="nServicios.html">servicios</a>
+                    <a class="nav-link text-light " href="contacto.html">contacto</a>
+                </div>
+            </div>
         </div>
-      </div>
+    </nav>
+    <div class="container mt-5 ">
+        <div class="row">
+            <div class=" col-12 text-center mt-5">
+                <h2>CONTACTANOS</h2>
+            </div>
+            <div class=" col-12">
+                <P class="text-left">
+                    Para cualquier duda sobre nuestros servicios, o como
+                    podemos ayudar a tu lomito pudes contactarnos al correo:
+                    lomitos@gmail.com o via whatsapp al 9999239823.
+                </P>
+            </div>
+            <div class=" col-12 text-center mb-5 w-100 ">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3724.8101506417256!2d-89.60050612474419!3d21.00024598064194!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjHCsDAwJzAwLjkiTiA4OcKwMzUnNTIuNiJX!5e0!3m2!1ses!2smx!4v1693943855154!5m2!1ses!2smx"
+                    width="80%" height="320" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </div>
     </div>
-  </nav>
-        <div class="container mt-5 ">
+    <footer class="py-4 mt-5">
+        <div class="container">
             <div class="row">
-                <div class=" col-12 text-center mt-5">
-                    <h2>CONTACTANOS</h2>
+                <div class="col-md-6">
+                    <p class="mb-0 fuente-brand">Physio Animal</p>
                 </div>
-                <div class=" col-12"><P class="text-left">
-                  Para cualquier duda sobre nuestros servicios, o como 
-                  podemos ayudar a tu lomito pudes contactarnos al correo:
-                  lomitos@gmail.com o via whatsapp al 9999239823.
-                </P></div>
-             <div class=" col-12 text-center mb-5 w-100 " >                 
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3724.8101506417256!2d-89.60050612474419!3d21.00024598064194!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjHCsDAwJzAwLjkiTiA4OcKwMzUnNTIuNiJX!5e0!3m2!1ses!2smx!4v1693943855154!5m2!1ses!2smx" width="80%" height="320" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <div class="col-md-6 text-md-end">
+                    <div>
+                        <a
+                            href="mailto:contacto@phisioanimal.com?subject=Mail from our Website">contacto@physioanimal.com</a>
+                    </div>
                 </div>
             </div>
         </div>
-        <footer class="py-4 mt-5">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-6">
-                        <p class="mb-0 fuente-brand">Physio Animal</p>
-                    </div>
-                    <div class="col-md-6 text-md-end">
-                        <div>
-                            <a
-                                href="mailto:contacto@phisioanimal.com?subject=Mail from our Website">contacto@physioanimal.com</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </footer>
+    </footer>
     <div class="containerBoton2  d-block d-xxl-none d-lg-none d-xl-none">
         <a href="tel:+529994417237">
             <img class="botonT" src="../img/phone-solid.svg" alt="boton lamada">
@@ -78,8 +83,11 @@
         </a>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+        crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="../js/app.js"></script>
 </body>
+
 </html>
