--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
-<body>
-
+<body data-bs-spy="scroll" data-bs-target=".navbar">
   <!--Barra de navegacion-->
   <nav class="navbar navbar-expand-lg background-color-principal mb-3 rounded-bottom ">
     <div class="container">
