avance physio animal

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
   <!--FINAL MISION VISION-->
 
   <!--SERVICIOS-->
-  <div class="container background-color-principal text-light ">
+  <div class="container background-color-principal text-light" data-aos="fade-down-left"    data-aos-duration="3000">
     <div class="row">
       <div class="col-12 section-intro text-center">
         <h2 class="text-uppercase mt-4 mb-5  p-3">
@@ -199,7 +199,7 @@
   <!--FINAL HISTORIAS BONITAS-->
   <!--ARTICULOS-->
   <div class="container mb-5">
-    <a href="#" class="nav-link">
+    <a href="assets/pages/FAQ.html" class="nav-link">
       <h2 class="text-center mb-4 text-color-principal">PREGUNTAS FRECUENTES</h2>
     </a>
     <div class="row">
