creacion de servicios

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
           <div class="card-body">
             <h5 class="card-title">¿Qué es la displasia de cadera?</h5>
             <p class="card-text">La displasia de cadera es una condición común en perros que afecta la
-              articulación de la cadera.. <a href="#">mas.</a></p>
+              articulación de la cadera.. <a href="assets/pages/FAQ.html">mas.</a></p>
 
           </div>
         </div>
@@ -218,7 +218,7 @@
           <div class="card-body">
             <h5 class="card-title">¿Qué pasa cuando un perro deja de caminar?</h5>
             <p class="card-text">Cuando un perro deja de caminar repentinamente, puede ser un signo de
-              una serie de problemas de salud .. <a href="#">mas.</a></p>
+              una serie de problemas de salud .. <a href="assets/pages/FAQ.html">mas.</a></p>
 
           </div>
         </div>
@@ -228,7 +228,7 @@
           <div class="card-body">
             <h5 class="card-title">¿Qué pasa cuando un perro pierde la fuerza en las piernas?</h5>
             <p class="card-text">La pérdida de fuerza en las piernas de un perro puede ser el resultado de
-              varias condiciones.. <a href="#">mas.</a></p>
+              varias condiciones.. <a href="assets/pages/FAQ.html">mas.</a></p>
           </div>
         </div>
       </div>
