avances en seccion servicios

--- a/index.html
+++ b/index.html
@@ -194,6 +194,16 @@
 
       </div>
     </div>
+    <div class="card mb-3 col-md-6" style="max-width: 540px;" >
+      <img src="assets/img/DAN05120-modified.png" class="card-img-top img-trabajos-previos" alt="...">
+      <div class="card-body">
+        <h5 class="card-title text-center">VALKIRIA</h5>
+        <p class="card-text ">Hola mi nombre es Valkiria pero todos me dicen “Valki”, tengo 1 año y medio.
+          Cuando nací sufrí de un accidente traumático, que dejó la mitad de mi cuerpo paralizado, el daño fue irreversible y la probabilidad de que caminara era casi nula, las personas que me tenían en sus manos al escuchar el diagnóstico decidieron dormirme, sin embargo otras personas me salvaron y me dieron otra oportunidad, fui adoptada con discapacidad a los 6 meses ya que me fue difícil encontrar familia rápido, sin embargo la encontré y tengo a la mejor, hoy en día sigo remando día a día para tener una buena calidad de vida, soy una perrita en silla de ruedas, pero gracias a las terapias, nada me duele y mis piernitas se han mantenido fuertes y sanas. La terapia me ayuda a prevenir lesiones a futuro y mantener mi musculatura, hoy en día soy una perrita bastante independiente, corro, juego, brinco, me eh adaptado a mi cuerpo para mis actividades de la vida diaria sin limitaciones.
+          Soy una perrita valiente, fuerte e independiente ❤️‍🩹</p>
+
+      </div>
+    </div>
   </div>
   </div>
   <!--FINAL HISTORIAS BONITAS-->
