avance en nuestros servicios

--- a/assets/pages/nServicios.html
+++ b/assets/pages/nServicios.html
@@ -91,17 +91,21 @@
         <div class="col-sm-6 mt-3">
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">Special title treatment</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              
+              <h5 class="card-title">Electroterapia</h5>
+              <p class="card-text">es un tratamiento fisioterapéutico que usa la corriente eléctrica para
+                estimular determinadas áreas del organismo que sufren procesos inflamatorios o dolor
+                nervioso, así como los músculos atrofiados y las lesiones osteomusculares. Tiene
+                propiedades antiinflamatorias y analgésicas, además de mejorar el trofismo y potenciar la
+                capacidad neuromuscular. También mejora la circulación y el flujo sanguíneo local.</p>
             </div>
           </div>
         </div>
         <div class="col-sm-6 mt-3">
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">Special title treatment</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <h5 class="card-title">Magnetoterapia</h5>
+              <p class="card-text">se define como la acción en la que se utilizan imanes permanentes o
+                equipos generadores de campos electromagnéticos, para lograr un objetivo terapéutico.</p>
               
             </div>
           </div>
