--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
 
     <!--QUIENES SOMOS-->
     <section class="mt-4">
-      <h2 class="titulos-text text-center text-color-principal">QUIÉNES SOMOS</h2>
-      <p class="  p-2 pading-lg m-auto text-left lg-text-center">
+      <h2 class="titulos-text text-center text-color-principal" data-aos="fade-up"    data-aos-duration="2500">QUIÉNES SOMOS</h2>
+      <p class="  p-2 pading-lg m-auto text-left lg-text-center" data-aos="fade-up"    data-aos-duration="2500">
         Somos un centro de fisioterapia y rehabilitación animal integral, en pequeñas
         especies, conformado por especialistas dedicados al bienestar y salud de tu mascota.
       </p>
@@ -80,7 +80,7 @@
 
     <!--MISION VISION-->
     <div class="row row-cols-1 row-cols-md-2 g-4 mt-5">
-      <div class="col">
+      <div class="col" data-aos="fade-up"    data-aos-duration="2500">
         <div class="card">
           <img src="assets/img/PA_006.jpg" class="card-img-top foto-radius-inverso max-height" alt="...">
           <div class="card-body">
@@ -90,7 +90,7 @@
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="col" data-aos="fade-up"    data-aos-duration="2500">
         <div class="card">
           <img src="assets/img/PA_011.jpg" class="card-img-top foto-radius  max-height" alt="...">
           <div class="card-body">
@@ -105,7 +105,7 @@
   <!--FINAL MISION VISION-->
 
   <!--SERVICIOS-->
-  <div class="container background-color-principal text-light" data-aos="fade-down-left"    data-aos-duration="3000">
+  <div class="container background-color-principal text-light" data-aos="fade-up"    data-aos-duration="2500">
     <div class="row">
       <div class="col-12 section-intro text-center">
         <h2 class="text-uppercase mt-4 mb-5  p-3">
@@ -142,9 +142,9 @@
   <div class="container">
     <h2 class=" mt-4 titulos-text text-center text-uppercase text-color-principal">historias bonitas</h2>
 
-    <div class="row">
+    <div class="row"   >
 
-    <div class="card mb-3 col-md-6" style="max-width: 540px;" >
+    <div class="card mb-3 col-md-6" style="max-width: 540px;" data-aos="fade-up"    data-aos-duration="2500">
       <img src="assets/img/1.png" class="card-img-top img-trabajos-previos" alt="...">
       <div class="card-body">
         <h5 class="card-title text-center">LUCKY</h5>
@@ -159,7 +159,7 @@
           fisioterapia, rehabilitación, y mi super doctora, estuve bien hasta mis últimos días.</p>
       </div>
     </div>
-    <div class="card mb-3 col-md-6"  style="max-width: 540px;" >
+    <div class="card mb-3 col-md-6"  style="max-width: 540px;" data-aos="fade-up"    data-aos-duration="2500">
       <img src="assets/img/2.png" class="card-img-top img-trabajos-previos" alt="...">
       <div class="card-body">
         <h5 class="card-title text-center">NUCKY </h5>
@@ -176,7 +176,7 @@
 
       </div>
     </div>
-    <div class="card mb-3 col-md-6" style="max-width: 540px;" >
+    <div class="card mb-3 col-md-6" style="max-width: 540px;" data-aos="fade-up"    data-aos-duration="2500" >
       <img src="assets/img/1.png" class="card-img-top img-trabajos-previos" alt="...">
       <div class="card-body">
         <h5 class="card-title text-center">KIIN</h5>
@@ -194,7 +194,7 @@
 
       </div>
     </div>
-    <div class="card mb-3 col-md-6" style="max-width: 540px;" >
+    <div class="card mb-3 col-md-6" style="max-width: 540px;" data-aos="fade-up"    data-aos-duration="2500" >
       <img src="assets/img/DAN05120-modified.png" class="card-img-top img-trabajos-previos" alt="...">
       <div class="card-body">
         <h5 class="card-title text-center">VALKIRIA</h5>
@@ -207,8 +207,8 @@
   </div>
   </div>
   <!--FINAL HISTORIAS BONITAS-->
-  <!--ARTICULOS-->
-  <div class="container mb-5">
+  <!--PREGUNTAS FRECUENTES-->
+  <div class="container mb-5" data-aos="fade-up"    data-aos-duration="2500">
     <a href="assets/pages/FAQ.html" class="nav-link">
       <h2 class="text-center mb-4 text-color-principal">PREGUNTAS FRECUENTES</h2>
     </a>
