correccionde footer y finalizacion de servicios

--- a/assets/pages/contacto.html
+++ b/assets/pages/contacto.html
@@ -57,7 +57,8 @@
             </div>
         </div>
     </div>
-    <footer class="py-4 mt-5">
+    <footer class="footer mt-auto py-3 fixed-bottom">
+      
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
