--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
   <div class="container">
     <!--CARRUSEL-->
-    <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+    <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel" data-aos="fade-up"    data-aos-duration="2500">
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img src="assets/img/1.1.png" class="d-block w-100" alt="...">
