--- a/assets/pages/FAQ.html
+++ b/assets/pages/FAQ.html
@@ -32,7 +32,7 @@
           <div class="navbar-nav ms-auto ">
             <a class="nav-link text-light active" aria-current="page" href="../../index.html">Inicio</a>
             <a class="nav-link text-light " href="nServicios.html">servicios</a>
-            <a class="nav-link text-light " href="assets/pages/contacto.html">contacto</a>
+            <a class="nav-link text-light " href="contacto.html">contacto</a>
           </div>
         </div>
       </div>
