--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
     <div class="row"   >
 
-    <div class="card mb-3 col-md-6" style="max-width: 540px;" data-aos="fade-up"    data-aos-duration="2500">
+    <div class="card mb-3 col-md-6 m-auto" style="max-width: 540px;" data-aos="fade-up"    data-aos-duration="2500">
       <img src="assets/img/1.png" class="card-img-top img-trabajos-previos" alt="...">
       <div class="card-body">
         <h5 class="card-title text-center">LUCKY</h5>
@@ -159,7 +159,7 @@
           fisioterapia, rehabilitación, y mi super doctora, estuve bien hasta mis últimos días.</p>
       </div>
     </div>
-    <div class="card mb-3 col-md-6"  style="max-width: 540px;" data-aos="fade-up"    data-aos-duration="2500">
+    <div class="card mb-3 col-md-6 m-auto"  style="max-width: 540px;" data-aos="fade-up"    data-aos-duration="2500">
       <img src="assets/img/2.png" class="card-img-top img-trabajos-previos" alt="...">
       <div class="card-body">
         <h5 class="card-title text-center">NUCKY </h5>
@@ -176,7 +176,7 @@
 
       </div>
     </div>
-    <div class="card mb-3 col-md-6" style="max-width: 540px;" data-aos="fade-up"    data-aos-duration="2500" >
+    <div class="card mb-3 col-md-6 m-auto" style="max-width: 540px;" data-aos="fade-up"    data-aos-duration="2500" >
       <img src="assets/img/1.png" class="card-img-top img-trabajos-previos" alt="...">
       <div class="card-body">
         <h5 class="card-title text-center">KIIN</h5>
@@ -194,7 +194,7 @@
 
       </div>
     </div>
-    <div class="card mb-3 col-md-6" style="max-width: 540px;" data-aos="fade-up"    data-aos-duration="2500" >
+    <div class="card mb-3 col-md-6 m-auto" style="max-width: 540px;" data-aos="fade-up"    data-aos-duration="2500" >
       <img src="assets/img/DAN05120-modified.png" class="card-img-top img-trabajos-previos" alt="...">
       <div class="card-body">
         <h5 class="card-title text-center">VALKIRIA</h5>
